# pandas-context

./: CHANGELOG.md  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
docs/source/: api.rst  conf.py  index.rst  quickstart.rst
src/pandas_context/: __init__.py  _version.py
tests/: test_simple.py
